tests/rosetta/out/Pascal/checkpoint-synchronization-3.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/checkpoint-synchronization-3.pas
checkpoint-synchronization-3.pas(21,14) Error: Identifier not found "_sliceString"
checkpoint-synchronization-3.pas(73) Fatal: There were 1 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
